<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_ira_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_custom_bg"
    tools:context=".SelectIra">

    <RadioGroup
        android:id="@+id/iraRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="268dp"
        android:background="@drawable/fragment_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rIRadioBtn"
            android:layout_width="100dp"
            android:layout_height="59dp"
            android:layout_gravity="start"
            android:checked="true"
            android:text="@string/rothIraRadioBtn"
            android:textColor="@color/black"

            />

        <RadioButton
            android:id="@+id/tIradioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tradIraRadioBtn"
            android:textColor="@color/black"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/which_selectable_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="17dp"
        android:minHeight="48dp"
        android:text="@string/whichBtn"
        android:textAllCaps="false"
        android:textColor="@color/light_blue"
        android:clickable="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iraRadioGroup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtnId1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="167dp"
        android:background="@drawable/button_default"

        android:text="@string/searchBtn1"
        app:layout_constraintBottom_toTopOf="@+id/which_selectable_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iraRadioGroup"
        app:layout_constraintVertical_bias="0.097" />


</androidx.constraintlayout.widget.ConstraintLayout>