<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_hi_view"
    android:background="@drawable/fragment_bg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".HillInfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/fragment_bg"
        android:text="@string/hill_descr"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/infoCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="32dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="2dp"
        android:textColor="@color/black"
        android:text="@string/infoCloseBtn"
        android:background="@drawable/button_custom"
        android:textAllCaps="false"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/infoGoBtn"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="3dp"
        android:text="@string/infoGoBtn"
        android:textColor="@color/black"
        android:background="@drawable/button_custom"
        android:textAllCaps="false"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>